--- a/DModule/Manual/Template/HTML/D.html
+++ b/DModule/Manual/Template/HTML/D.html
@@ -30,11 +30,11 @@
                 <span class="page-header-section-title">D</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/D_SVG.svg" class="diagram">
+                <img src="img/Component/D.svg" class="diagram">
                 <h2>On the Subject of D</h2>
                 <p class="flavour-text">Probably the worst module to exist.</p>
 
-                    <p><i>Refer to Appendix BLANK in <a href="https://ktane.timwi.de/HTML/Blind%20Alley.html#app-blank-modules">Blind Alley</a> for blank modules identification.</i></p>
+                    <p><i>Refer to Appendix BLANK in <a href="Blind%20Alley.html#app-blank-modules">Blind Alley</a> for blank modules identification.</i></p>
 
                     <p>This module is blank, but hovering over the module will reveal the letter D.</p>
 
@@ -162,7 +162,7 @@
                     <h3>Submitting the Module (with Example)</h3>
                 <p>To submit the module, take the results from the previous two pages.
                     From most significant to least significant, 
-                    press the D when the last digit of the timer matches the corresponding digit. </p>
+                                     press the D when the last digit of the timer matches the corresponding digit. </p>
                     <p>For example, if your bomb’s serial number is 4D1HM4, D would be 4+13+1+17+22+4=61. Prepending a zero gives 061. 
                     D modulo 3 is 1. We use the third and fourth characters (1H) Let's say that there's no OmegaForget, so we don't swap the characters.
                     1=53 and H=7, and 53 times 64 plus 7 is equal to 3399. Taking the last three digits, we get 399. In this case, our submission is <u>061399</u>.
@@ -183,11 +183,9 @@
                 <span class="page-header-section-title">D</span>
             </div>
             <div class="page-content">
-                <h2>On The Subject Of D's Extra Rules</h2>
+                <h2>On The Subject Of D's Anti-Unicorn Rule</h2>
                     <p style="font-size: 12px"><i>These rules probably only exist just for the sole purpose of interfering with the solving process.
                     I was going to make a joke about this involving the module's name, but everyone else hated it.</i></p>
-                
-                    <h3>The Anti-Unicorn Rule</h3>
 
                 <p>When you are solving D, look out for these three edgework conditions:</p>
                     <ol>
@@ -199,9 +197,7 @@
                     MUST be solved first before you can solve any D modules.</b> Attempting to solve D while there are any unsolved
                     Simon Stores or UltraStores modules on the bomb will cause a strike, regardless of whether the submitted
                     D was correct or not.</p>
-
-                    <h3>The Anti-Calculator Rule</h3>
-                    <p>This module also watches for instances of The Calculator on the bomb. <b>IF ANY INSTANCES OF THE CALCULATOR ARE SOLVED BEFORE YOU SOLVE D, D WILL BECOME <u>UNSOLVABLE.</u></b></p>
+                                                            <p>HOWEVER... <b>disregard this unicorn rule if there is an Organization on the bomb.</b></p>
             </div>
             <div class="page-footer relative-footer">Page 4 of 4</div>
         </div>
