--- a/Simon's Sums/Manual/Template/HTML/Simon'sSums.html
+++ b/Simon's Sums/Manual/Template/HTML/Simon'sSums.html
@@ -24,7 +24,7 @@
                 <span class="page-header-section-title">Simon's Sums</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/Simon's Sums.svg" class="diagram">
+                <img src="img/Component/Simon'sSums.svg" class="diagram">
                 <h2>On the Subject of Simon's Sums</h2>
                 <p class="flavour-text">I think Simon just found out that the timer exists. And that's a problem since we can't just press the module at any time anymore...</p>
 
@@ -76,7 +76,7 @@
                                                             <li>Add the number of times this color flashed in the sequence, minus one.</li>
                                                             <li>If an adjacent button flashed in this stage, add eight to F.</li>
                                                             <li>If this is the second or third stage and this color didn’t flash in the previous stage, subtract fifteen.</li>
-                                                            <li>If this is NOT the first flash of the stage, subtract one from F for the number of buttons you need to go counterclockwise to get to the button that previously flashed.</li>
+                                                            <li>If this is NOT the first flash of the stage, subtract one from F for the number of buttons you need to go counterclockwise to get to the button that previously flashed, UNLESS the previous button that flashed is the same as this one, where in this case, add thirty instead.</li>
                                                             <li>If F is negative, take the absolute value (make it positive).</li>
                                                             <li>If this F-value matches a previous F-value earlier in this stage, add one until it's unique.</li>
                                                 </ol>
@@ -101,7 +101,7 @@
                                                 <h4>Determining Press Values</h4>
                 <p>To identify when to press the buttons, we first need to obtain press values, referred to as X and Y.</p>
                 <ol>
-                    <li>To do this, take the flash values of the color for that stage. If the color never flashed, use the initial value instead.</li>
+                    <li>To do this, take the flash values of the color for that stage. If the color never flashed, use the initial value instead. This value will be called X.</li>
                                                             <li>Divide X by the number obtained from the table depending on the location of the flash, and round down:</li></ol>
                                                             <table>
                                                             <tr>
